--- a/assets/styles.css
+++ b/assets/styles.css
@@ -56,3 +56,8 @@ grid-template-columns: 1fr 2fr;
     font-weight: 300;
     line-height: 1.25;
 }
+
+.horizontal{
+    display: flex;
+    flex-direction: row;
+}
