--- a/assets/styles.css
+++ b/assets/styles.css
@@ -61,3 +61,10 @@ grid-template-columns: 1fr 2fr;
     display: flex;
     flex-direction: row;
 }
+
+.forecastCard{
+    border: green;
+    border-style: solid;
+    border-width: 2px;
+    display: inline-block;
+}
